--- a/.github/workflows/lint-frontend.yml
+++ b/.github/workflows/lint-frontend.yml
@@ -5,6 +5,10 @@ on:
         paths:
             - 'frontend/**'
 
+permissions:
+    contents: read
+    pull-requests: write
+
 jobs:
     run-linters:
         name: Run linters
