--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,38 +16,39 @@
     "prelint": "npm run format"
   },
   "devDependencies": {
-    "@mdi/js": "^6.9.96",
-    "@rollup/plugin-commonjs": "^22.0.1",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-typescript": "^8.3.3",
-    "@smui/card": "^6.0.0-beta.16",
-    "@smui/data-table": "^6.0.0-beta.16",
-    "@smui/icon-button": "^6.0.0-beta.16",
-    "@smui/textfield": "^6.0.0-beta.16",
-    "@smui/top-app-bar": "^6.0.0-beta.16",
+    "@mdi/js": "^7.1.96",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^11.0.0",
+    "@smui/card": "^7.0.0-beta.0",
+    "@smui/data-table": "^7.0.0-beta.0",
+    "@smui/icon-button": "^7.0.0-beta.0",
+    "@smui/textfield": "^7.0.0-beta.0",
+    "@smui/top-app-bar": "^7.0.0-beta.0",
     "@tsconfig/svelte": "^3.0.0",
     "@types/netmask": "^1.0.30",
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "@typescript-eslint/parser": "^5.23.0",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
+    "eslint": "^8.33.0",
+    "eslint-plugin-svelte3": "^4.0.0",
     "ip-subnet-calculator": "^1.1.8",
     "mdi-svelte": "^1.1.2",
     "netmask": "^2.0.2",
-    "eslint": "^8.15.0",
-    "eslint-plugin-svelte3": "^4.0.0",
-    "prettier": "^2.6.2",
-    "prettier-plugin-svelte": "^2.7.0",
-    "rollup": "^2.77.0",
-    "rollup-plugin-css-only": "^3.1.0",
+    "prettier": "^2.8.3",
+    "prettier-plugin-svelte": "^2.9.0",
+    "rollup": "^3.13.0",
+    "rollup-plugin-css-only": "^4.3.0",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
+    "sed": "^0.0.2",
     "sirv-cli": "^2.0.2",
-    "smui-theme": "^6.0.0-beta.16",
-    "svelte": "^3.49.0",
-    "svelte-check": "^2.8.0",
-    "svelte-material-ui": "^6.0.0-beta.16",
-    "svelte-preprocess": "^4.10.7",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.4"
+    "smui-theme": "^7.0.0-beta.0",
+    "svelte": "^3.55.1",
+    "svelte-check": "^3.0.3",
+    "svelte-material-ui": "^7.0.0-beta.0",
+    "svelte-preprocess": "^5.0.1",
+    "tslib": "^2.5.0",
+    "typescript": "^4.9.5"
   }
 }
