--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -15,17 +15,18 @@ jobs:
         runs-on: ubuntu-latest
         steps:
           - name: Check out Git repository
-            uses: actions/checkout@v2
+            uses: actions/checkout@v4
 
           - name: Set up Node.js
-            uses: actions/setup-node@v1
+            uses: actions/setup-node@v4
             with:
-              node-version: 16
+              node-version: 20
+              cache: npm
 
           - name: Set up go
-            uses: actions/setup-go@v3
+            uses: actions/setup-go@v4
             with:
-                go-version: '>=1.17.0'
+                go-version-file: 'go.mod'
 
           - name: Install Node.js and bulid
             run: |
