--- a/.github/workflows/githubPageDeploy.yml
+++ b/.github/workflows/githubPageDeploy.yml
@@ -13,9 +13,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v2
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: '16'
+          node-version: 20
           cache: npm
 
       - run: npm install
