--- a/.github/workflows/lint-frontend.yml
+++ b/.github/workflows/lint-frontend.yml
@@ -15,12 +15,13 @@ jobs:
         runs-on: ubuntu-latest
         steps:
           - name: Check out Git repository
-            uses: actions/checkout@v2
+            uses: actions/checkout@v4
 
           - name: Set up Node.js
-            uses: actions/setup-node@v1
+            uses: actions/setup-node@v4
             with:
-              node-version: 16
+              node-version: 20
+              cache: npm
 
           # ESLint and Prettier must be in `package.json`
           - name: Install Node.js dependencies
