--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,58 +1,57 @@
 name: "build and debloy"
 
 on:
-    push:
-        branches:
-            - main
+  push:
+    branches:
+      - main
 
 permissions:
-    checks: write
-    contents: write
+  checks: write
+  contents: write
 
 jobs:
-    run-build:
-        name: Run build
-        runs-on: ubuntu-latest
-        steps:
-          - name: Check out Git repository
-            uses: actions/checkout@v4
+  run-build:
+    name: Run build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out Git repository
+        uses: actions/checkout@v4
 
-          - name: Set up Node.js
-            uses: actions/setup-node@v4
-            with:
-              node-version: 20
-              cache: npm
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
 
-          - name: Set up go
-            uses: actions/setup-go@v4
-            with:
-                go-version-file: 'go.mod'
+      - name: Set up go
+        uses: actions/setup-go@v4
+        with:
+          go-version-file: "go.mod"
 
-          - name: Install Node.js and bulid
-            run: |
-              npm install -g npm@latest
-              npm i
-              npm run build
-            working-directory: ./frontend
+      - name: Install Node.js and bulid
+        run: |
+          npm install -g npm@latest
+          npm i
+          npm run build
+        working-directory: ./frontend
 
-          - name: Run build
-            run: |
-              go version
-              ls -la ../../frontend/public
-              ls -la ../../frontend/public/build
-              go build
-              ls -la ./api
-            working-directory: ./cmd/api
-          - name: Setup ssh
-            uses: shimataro/ssh-key-action@v2
-            with:
-              key: ${{ secrets.SSH_KEY }}
-              name: id_ed25519
-              known_hosts: ${{ secrets.KNOWN_HOSTS }}
-              if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
-          - name: Run deploy
-            run: |
-              ls -la ./api
-              scp -P${{ secrets.SSH_PORT }} ./api ${{ secrets.SSH_USER }}@${{ secrets.SSH_SERVER }}:api
-              ssh -p${{ secrets.SSH_PORT }}  ${{ secrets.SSH_USER }}@${{ secrets.SSH_SERVER }} "sudo /opt/inet-ip.info/deploy.sh"
-            working-directory: ./cmd/api
+      - name: Run build
+        run: |
+          go version
+          ls -la ../../frontend/public
+          go build
+          ls -la ./api
+        working-directory: ./cmd/api
+      - name: Setup ssh
+        uses: shimataro/ssh-key-action@v2
+        with:
+          key: ${{ secrets.SSH_KEY }}
+          name: id_ed25519
+          known_hosts: ${{ secrets.KNOWN_HOSTS }}
+          if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
+      - name: Run deploy
+        run: |
+          ls -la ./api
+          scp -P${{ secrets.SSH_PORT }} ./api ${{ secrets.SSH_USER }}@${{ secrets.SSH_SERVER }}:api
+          ssh -p${{ secrets.SSH_PORT }}  ${{ secrets.SSH_USER }}@${{ secrets.SSH_SERVER }} "sudo /opt/inet-ip.info/deploy.sh"
+        working-directory: ./cmd/api
