--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "netmask": "^2.0.2",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
+    "shlex": "^2.1.2",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
     "svelte-codemirror-editor": "^1.2.0",
